# higgs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LESSONS.md  README.md  SPECPREFILL_PLAN.md  TDD_PAGED_CACHE_BATCHING.md  TDD_SPEC_PREFILL.md  bench_all.py  bench_all_models.sh  bench_models.sh  bench_prefix_cache_turns.py  bench_ttft.sh  bench_turboquant.sh  lefthook.yml
.planning/: PROGRESS.md
benchmarks/: bench_all.py  bench_h2h.py  bench_h2h_20260326_123830.txt  bench_h2h_20260326_124616.txt  bench_h2h_20260326_133359.txt  bench_h2h_20260326_142213.txt  bench_h2h_20260326_142450.txt  bench_h2h_20260326_143148.txt  bench_h2h_20260326_165801.txt  bench_h2h_20260326_165920.txt  bench_h2h_20260326_175822.txt  bench_h2h_20260326_180237.txt  bench_moe_sort.py  bench_ppl_tq.py  bench_prefix_cache.py  bench_prefix_cache_turns.py  bench_results_20260325_171334.txt  bench_results_20260325_171535.txt  bench_results_20260325_172134.txt  bench_tool_calling.py  bench_tq_configs.py  bench_ttft_quick.py  bench_ttft_results.txt  sweep_eggroll_20260404_200854.tsv  sweep_eggroll_20260404_210931.tsv  sweep_eggroll_20260404_224950.tsv
crates/higgs-ane/: Cargo.toml  build.rs
crates/higgs-ane/bridge/ane/: ane_bridge.h
crates/higgs-ane/bridge/coreml/: Makefile  coreml_bridge.h  coreml_bridge.m
crates/higgs-ane/src/: config.rs  coreml.rs  decode.rs  lib.rs  safetensors.rs  weights.rs
docs/: chunked-prefill-design.md  self-train-research.md
memory/: ane-diffusion-handoff.md
scripts/: convert_draft_coreml.py  convert_draft_coreml_stateless_small.py  e2e_training_proof.py  (+8 more)
(+113 files in other folders)
